# kirskuna

./: .travis.yml  Cargo.toml  README.md
src/: base.rs  clip_cubic.rs  delay.rs  fm.rs  input.rs  lib.rs  main.rs  math.rs  midi.rs  node.rs  sine.rs
